--- a/src/index.css
+++ b/src/index.css
@@ -582,7 +582,7 @@ nav[aria-label="Pagination"] button:disabled{@apply cursor-not-allowed text-opac
 /* locator page start  */
 
 /* breadcrumb */
-.breadcrumb{@apply text-nav-link pt-[1.5rem] pb-[0.5rem] w-[97%] h-20}
+.breadcrumb{@apply text-nav-link pt-[1.5rem] pb-[0.5rem] w-[44%] h-20 bg-[#e7ecef] relative pl-[20px]}
 .breadcrumb ul{
   @apply flex flex-wrap items-center
 }
@@ -761,7 +761,7 @@ ul#splide-nearby-list {
   width: 15rem;
   text-decoration-line: none !important;
 }
-a.Link.btn.notHighligh {
+/* a.Link.btn.notHighligh {
   letter-spacing: .0625rem;
   color: #024b86 !important;
   text-transform: uppercase;
@@ -773,12 +773,8 @@ a.Link.btn.notHighligh {
   padding-left: 0;
   margin-left: 0px !important;
   text-decoration-line: none !important;
-}
-a.Link.btn.notHighligh:hover > .locator-button-box{
-  background-color: #024b86;
-  color: #fff;
-  border-color: #024b86;
-}
+} */
+
 
 /* newsletter sec */
 .newsletter-section{ @apply bg-newslettter_bg_mob lg:bg-newslettter_bg py-6 mt-10 w-full inline-block }
@@ -964,7 +960,7 @@ a.Link.btn.notHighligh:hover > .locator-button-box{
 }
 .location-information{
   background: white;
-  width: 69%;
+  width: 60%;
   /* float: left; */
   /* margin-top: 70px; */
   margin-left: 20px;
@@ -973,16 +969,17 @@ a.Link.btn.notHighligh:hover > .locator-button-box{
   position: relative;
   z-index: 99;
   height: 79%;
+  box-shadow: 4px 4px #8caabb;
 }
 .hero-container {
   display: flex;
   /* padding-left: 20px; */
-  gap: 121px;
+  gap: 20px;
 }
 .hero-image{
   position: absolute;
   height: 100%;
-  width: 50.75rem;
+  width: 58.75rem;
   /* top: 0; */
   right: 0;
 }
@@ -1016,10 +1013,27 @@ h1.entity-name{
   color: #024b86 !important;
   font-weight: 700;
   text-transform: uppercase;
-  padding: 0.3125rem 0.875rem;
-  height: 2.3rem;
-  width: 9.5rem;
+  padding: 4px 6px;
+  height: 2rem;
+  width: 8rem;
   border: 1px solid #024b86;
+  border-radius: 125rem;
+  letter-spacing: .03125rem;
+}
+.getdirection-button-box:hover{
+  background-color: #024b86;
+  color: #fff;
+  border-color: #024b86;
+  font-size: .75rem;
+  line-height: 2.08;
+  /* background-color: #fff !important; */
+  /* color: #024b86 !important; */
+  font-weight: 700;
+  text-transform: uppercase;
+  padding: 4px 6px;
+  height: 2rem;
+  width: 8rem;
+  /* border: 1px solid #024b86; */
   border-radius: 125rem;
   letter-spacing: .03125rem;
 }
@@ -1033,7 +1047,7 @@ h1.entity-name{
     text-transform: uppercase;
     /* padding: 0.2rem 0.875rem; */
     height: 1.6rem;
-    width: 9.5rem;
+    width: 8rem;
     border: 1px solid #024b86;
     border-radius: 125rem;
     letter-spacing: .03125rem;
