--- a/src/index.css
+++ b/src/index.css
@@ -419,10 +419,10 @@ body.menu-opened{ @apply overflow-hidden lg:overflow-auto;}
 /* banner sec */
 .banner-sec{ @apply bg-gray-light py-16 mt-4}
 .banner-sec h1{ @apply text-3xl text-center uppercase }
-.locator-main{ @apply  mt-10  align-bottom w-[97%] max-w-[99.5rem] mx-auto px-0 md:px-4 lg:px-6 xl:px-0}
+.locator-main{ @apply  mt-10 mb-4  align-bottom w-[97%] max-w-[99.5rem] mx-auto px-0 md:px-4 lg:px-6 xl:px-0}
 .left-listing{ @apply w-full md:w-[30rem] lg:w-[33.6875rem] }
 .map-section{@apply w-full md:w-[calc(100%_-_30rem)] lg:w-[calc(100%_-_33.6875rem)]  md:pl-4 float-right}
-.locator-map-block{  @apply w-full  h-[80vh] md:h-screen top-0 order-1 lg:order-none z-[99];}
+.locator-map-block{  @apply w-full  h-[80vh] md:h-[105vh] top-0 order-1 lg:order-none z-[99];}
 .hero-section .hero-content .banner-text.banner-dark-bg{ @apply  border-l-0 inline-block flex flex-col items-center p-4      rounded-lg backdrop-blur-sm bg-Dark-red mx-auto w-[340px] sm:w-[500px] px-2.5 text-center}
 .hero-section .hero-content .banner-text.banner-dark-bg h1{  @apply text-2xl md:text-[1.75rem] mb-1.5 font-normal}
 .hero-section .hero-content .banner-text.banner-dark-bg h3{  @apply text-xl md:text-2xl font-normal}
@@ -442,8 +442,8 @@ body.mapView .mobile-btns .btn.mapBtn{  @apply text-Dark-red border-t-0 border-l
 
 /* left listing */
 .search-bx{@apply  mb-0  z-20 px-4 md:pl-3  pt-0 pb-6 text-gray-dark float-left w-full md:w-[30rem] lg:w-[33.6875rem] border-b border-[#d8d8d8] bg-[#f5f8fa]}
-.search-bx button{ @apply float-left mr-0 relative }
-.search-bx button.useMyLocation {@apply text-dark-gray flex items-center font-second-main-font text-lg}
+.search-bx button{ @apply mr-0 relative }
+.search-bx button.useMyLocation {@apply text-dark-gray flex items-center font-second-main-font text-lg w-[50%]}
 .search-bx button.useMyLocation .icon{@apply mr-1.5}
 .search-field{@apply flex relative  }
 .search-bx .search-btn{@apply absolute top-0 rounded-none right-0  text-white p-2 w-12 h-12 text-center bg-[#024b86] }  
@@ -493,7 +493,7 @@ body.mapView .mobile-btns .btn.mapBtn{  @apply text-Dark-red border-t-0 border-l
 #result-1 .result-inner{ @apply pt-0 md:pt-4}
 #result-1 .result-inner .availablity-content{@apply mt-2}
 /* .location-phn{ @apply  hover:!no-underline text-lg } */
-.fliter-sec{ @apply mt-2 flex items-start  justify-start  flex-col }
+.fliter-sec{ @apply mt-2 flex items-start  justify-start  flex-row }
 .location .result-inner .green-dot, .location .result-inner .red-dot{ @apply  flex  }
 .location .result-inner .green-dot svg, .location .result-inner .red-dot svg{ @apply  ml-1 mt-1 }
 .location-with-filter{ @apply mb-6 flex items-center justify-between text-sm leading-5}
@@ -1659,19 +1659,41 @@ flex-direction: column;
   position: relative;
 }
 
-button#react-collapsed-toggle-1 {
+button#react-collapsed-toggle-1,button#react-collapsed-toggle-2 {
   font-size: 0.875rem;
   line-height: 1.25rem;
-  background: blue;
+  background: #024b86;
   color: #fff;
-  padding: 10px;
-  margin-top: 10px;
+  padding: 5px;
   position: relative;
   width: 100%;
+  margin-bottom: 5px;
 }
-div#react-collapsed-panel-1 {
+div#react-collapsed-panel-1,div#react-collapsed-panel-2 {
   /* padding: 10px; */
   /* position: relative; */
   width: 100%;
   overflow: hidden;
+}
+.fliter-sec.filter-facet.on {
+  display: block;
+}
+.fliter-sec.filter-facet.off {
+  display: none;
+}
+.facet-button-class {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  background: #024b86;
+  color: #fff;
+  padding: 5px;
+  margin-top: 10px;
+  position: relative;
+  width: 100%;
+  text-align: center;
+  cursor: pointer;
+}
+div#bg-search > .w-full .w-full.h-px.bg-gray-200.my-4 {
+  display: none;
+
 }
