--- a/src/index.css
+++ b/src/index.css
@@ -549,7 +549,7 @@ table.day-hrs .time-b{  @apply text-lg md:text-lg  w-auto leading-[1.875rem] rou
   @apply max-w-[94%] md:max-w-3xl w-full max-h-[80%] !mr-0 !p-0 !pb-8 !border-none  !rounded-[20px]
 }
 .ReactModal__Overlay{
-  @apply !bg-black bg-opacity-80 z-[999]
+  @apply !bg-[#00000099] bg-opacity-80 z-[999]
 }
 .ReactModal__Content .closeButton {@apply absolute right-4 top-2 cursor-pointer}
 .pop-up-holyhrs{@apply flex flex-row border border-dark-gray mr-4  border-b-0 last:border-b}
