--- a/src/index.css
+++ b/src/index.css
@@ -445,7 +445,7 @@ body.mapView .mobile-btns .btn.mapBtn{  @apply text-Dark-red border-t-0 border-l
 .search-bx button{ @apply mr-0 relative }
 .search-bx button.useMyLocation {@apply text-dark-gray flex items-center font-second-main-font text-lg w-[50%]}
 .search-bx button.useMyLocation .icon{@apply mr-1.5}
-.search-field{@apply flex relative  }
+.search-field{@apply relative  }
 .search-bx .search-btn{@apply absolute top-0 rounded-none right-0  text-white p-2 w-12 h-12 text-center bg-[#024b86] }  
 .search-bx .search-btn svg{ @apply mx-auto}
 .search-field input{@apply  w-full bg-white h-12 text-dark-gray placeholder:text-dark-gray  py-2 pr-20 sm:py-4 sm:pr-16 pl-4 leading-7  text-[1.0625rem] font-main-font  border border-[#8c8c8c] rounded-none border-none}
@@ -1701,4 +1701,7 @@ div#bg-search > .w-full .w-full.h-px.bg-gray-200.my-4 {
   padding-left: 8px;
   display: flex;
   opacity: .6;
+}
+input#pac-input::placeholder {
+  color: gray;
 }
