--- a/src/index.css
+++ b/src/index.css
@@ -607,10 +607,10 @@ table.day-hrs .time-b{  @apply text-lg md:text-lg  w-auto leading-[1.875rem] rou
 
 
 .gm-style-iw{ @apply  !px-0 max-w-full md:!max-w-[24.312rem] lg:!max-w-full}
-.gm-style .gm-style-iw-c{@apply !rounded-none }
+.gm-style .gm-style-iw-c{@apply !rounded-[20px] }
 .gm-style-iw-d .button-bx{@apply !justify-start flex-row }
 .gm-style-iw-d .button-bx .getdirection{@apply !bg-transparent !text-gray underline }
-.gm-style-iw-d .button-bx .getdirection1{@apply !bg-transparent  !text-gray underline }
+
 
 .info-window-content{@apply flex   justify-between}
 .info-window-content .address{ @apply w-2/3 }
@@ -640,7 +640,7 @@ nav[aria-label="Pagination"] button:disabled{@apply cursor-not-allowed text-opac
 .nearby-card .button-bx .btn.notHighligh{@apply w-[57%] bg-white justify-start  border-none text-[#024b86] text-[13px] font-[revert]}
 .nearby-card .button-bx .btn + .btn{@apply mt-2 md:mt-0 w-auto hover:no-underline}
 .nearby-card .button-bx .btn:hover svg{@apply !fill-red }
-.map-section .button-bx .btn{@apply w-[11.25rem] md:w-[9.25rem] lg:w-[11.25rem]  bg-Dark-red hover:bg-hover-btn font-second-main-font  border-none text-white  }
+.map-section .button-bx .btn{@apply w-[11.25rem] md:w-[9.25rem] lg:w-[11.25rem] bg-[#024b86] hover:bg-hover-btn  border-none text-white  }
 .map-section .button-bx .btn.notHighligh{@apply w-full md:w-[48%] bg-white justify-start  border-none text-black underline  }
 .map-section .button-bx .btn + .btn{@apply mt-2 md:mt-0 w-auto ml-2 hover:no-underline}
 .map-section .button-bx .btn:hover svg{@apply !fill-red }
